# F1_Strategy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADR-0001.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  scope.md  test_policy.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  train-cloud.yml
.streamlit/: config.toml
data/: gold_2022_2025.parquet  gold_2024.parquet
docs/: architecture.md
docs/decisions/: 0001-cloud-agnostic-mlops.md  0002-aws-s3-gpu-training.md  0003-dqn-per-strategy-policy.md  0004-sequence-tire-models.md
docs/guides/: aws-setup.md
infra/argo/workflows/: train-safety-car.yaml  train-strategy-policy.yaml  train-tire-degradation.yaml
infra/docker/: postgres-init.sql
infra/terraform/aws/: backend.tf.example  ecr.tf  eks.tf  iam.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf  vpc.tf
infra/terraform/aws/bootstrap/: main.tf
ml/features/: __init__.py  data_sources.py  definitions.py  entities.py  feature_store.yaml  feature_views.py
ml/models/: _loader.py
ml/models/safety_car/: Dockerfile  predict.py  train.py
ml/models/strategy_policy/: Dockerfile  per_buffer.py  predict.py  predict_dqn.py  train.py  train_dqn.py
ml/models/tire_degradation/: Dockerfile  model_patch_tst.py  model_tcn_gru.py  predict.py  predict_sequence.py  sequence_dataset.py  train.py  train_sequence.py  wrapper.py
models_baked/: manifest.json
models_baked/sc/: MLmodel  conda.yaml  model.pkl  python_env.yaml  registered_model_meta  requirements.txt
models_baked/tire/: MLmodel  conda.yaml  model.pkl  registered_model_meta  requirements.txt
models_baked/tire_patch_tst/: config.json  model.pt  norm_stats.json
models_baked/tire_tcn_gru/: config.json  model.pt  norm_stats.json
scripts/: export_for_deploy.py  upload_gold_to_s3.py  validate_tire_models.py
services/frontend/: app.py
services/ingestion/: config.py  fastf1_client.py  pipeline.py  storage.py  transforms.py
services/ingestion/schemas/: __init__.py  bronze.py  gold.py  silver.py
services/live/: __init__.py  f1_signalr.py  live_log.py  live_record.py  obs_builder.py  openf1.py  openf1_api.py  openf1_client.py  prediction_log.py  race_log.py  timing_state.py
services/simulator/: __init__.py  env.py  lap_simulator.py  tyre_calibration.py  validator.py
tests/: conftest.py
tests/data_quality/: test_contracts.py
tests/fixtures/: README.md
tests/unit/ingestion/: test_schemas.py  test_storage.py  test_transforms.py
tests/unit/live/: test_f1_signalr.py  test_live_record.py  test_obs_builder.py  test_race_log.py  test_timing_state.py
tests/unit/tire/: test_sequence_models.py
