[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pitwall-ai"
version = "0.3.0"
description = "Open-source F1 race strategy engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
dependencies = [
    # Data
    "fastf1>=3.3",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "numpy>=1.26",
    # Data quality
    "pandera[pandas]>=0.18",
    # Config & schemas
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Orchestration
    "prefect>=2.19",
    # Object storage (boto3 for S3/MinIO; s3fs for fsspec-based direct reads)
    "boto3>=1.34",
    "s3fs>=2024.2",
    "fsspec>=2024.2",
    # Experiment tracking & model registry
    "mlflow>=2.12",
    # Feature store
    "feast[aws]>=0.38",
    # Tabular ML
    "lightgbm>=4.3",
    # RL
    "torch>=2.2",
    "stable-baselines3>=2.3",
    "gymnasium>=0.29",
    # Serving
    "bentoml>=1.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # Frontend
    "streamlit>=1.33",
    "plotly>=5.20",
    "python-dotenv>=1.0",
    # Live timing
    "requests>=2.31",
    # Utilities
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "moto[s3]>=5.0",          # AWS mock for unit tests
    "ruff>=0.4",
    "mypy>=1.9",
    "pandas-stubs>=2.2",
    "boto3-stubs[s3]>=1.34",
    "pre-commit>=3.7",
    "nbstripout>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["services", "ml"]

# ---------------------------------------------------------------------------
# uv — PyTorch CUDA 12.1 index (RTX 3060; cu121 works on all CUDA 12.x drivers)
# uv 0.5+ uses [[tool.uv.index]] (singular), not [[tool.uv.indexes]].
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["services", "ml", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "ANN401", # Dynamically typed expressions (Any)
    "RUF001", # String contains ambiguous Unicode — en-dash/Greek chars valid in ML docs
    "RUF002", # Docstring contains ambiguous Unicode — same
    "RUF003", # Comment contains ambiguous Unicode — same
    "N806",   # X_train/X_val uppercase — standard ML/sklearn convention
    "E402",   # Module-level import not at top — load_dotenv() before imports is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["ml/notebooks/", "tests/"]

[[tool.mypy.overrides]]
module = ["fastf1.*", "pandera.*", "prefect.*", "feast.*", "bentoml.*", "stable_baselines3.*", "gymnasium.*", "mlflow.*", "lightgbm.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=services",
    "--cov=ml",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
    "-v",
]

[tool.coverage.run]
source = ["services", "ml"]
omit = [
    "*/notebooks/*",
    "*/__pycache__/*",
    "*/migrations/*",
    # Integration-test-only: require MLflow, S3, Feast, GPU, or live data.
    # Covered by integration tests (docker-compose), not unit tests.
    "services/simulator/*",
    "services/frontend/*",
    "services/api/*",
    "services/live/openf1_api.py",  # thin HTTP wrapper; tested via integration tests
    "services/ingestion/fastf1_client.py",
    "services/ingestion/pipeline.py",
    "ml/features/*",
    "ml/models/_loader.py",
    "ml/models/safety_car/*",
    "ml/models/strategy_policy/*",
    "ml/models/tire_degradation/*",
    "ml/pipelines/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
